src/widgets/snapshots/rvision__widgets__color_picker__tests__snapshot_cga16_grid_only.snap
---
source: src/widgets/color_picker.rs
assertion_line: 1058
expression: render(&cga16())
---
   [ ]                        
                              
                              
          OK        Cancel
