src/widgets/snapshots/rvision__widgets__color_picker__tests__snapshot_grid_highlight_on_a_named_initial.snap
---
source: src/widgets/color_picker.rs
assertion_line: 1081
expression: render(&p)
---
                              
                  [ ]         
                              
          OK        Cancel
