src/widgets/snapshots/rvision__widgets__color_picker__tests__snapshot_pick_window.snap
---
source: src/widgets/color_picker.rs
assertion_line: 1193
expression: buf.to_text()
---
┌─────────── Colour ───────────┐
│   [ ]                        │
│                              │
│                              │
│          OK        Cancel    │
└──────────────────────────────┘
