src/widgets/snapshots/rvision__widgets__color_picker__tests__snapshot_truecolor_hex_mode.snap
---
source: src/widgets/color_picker.rs
assertion_line: 1075
expression: render(&p)
---
   [ ]                        
                              
                              
#:0000AA               RGB    
                              
          OK        Cancel
