src/widgets/snapshots/rvision__widgets__color_picker__tests__snapshot_truecolor_rgb_mode.snap
---
source: src/widgets/color_picker.rs
assertion_line: 1063
expression: render(&truecolor())
---
   [ ]                        
                              
                              
R:0    G:0    B:170    Hex    
                              
          OK        Cancel
